--- a/.cargo/config
+++ b/.cargo/config
@@ -1,13 +1,9 @@
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-# uncomment ONE of these three option to make `cargo run` start a GDB session
-# which option to pick depends on your system
 runner = "arm-none-eabi-gdb -q -x bmp.gdb"
-# runner = "gdb-multiarch -q -x openocd.gdb"
-# runner = "gdb -q -x openocd.gdb"
 
 rustflags = [
   # LLD (shipped with the Rust toolchain) is used as the default linker
-  "-C", "link-arg=-Tlink.x",
+  "-C", "link-arg=-Tlink.x",# "-C", "inline-threshold=225"
 
   # if you run into problems with LLD switch to the GNU linker by commenting out
   # this line
