--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,6 @@ bench = false
 
 [profile.release]
 codegen-units = 1 # better optimizations
-opt-level = "z"
+opt-level = "s"
 debug = true # symbols are nice and they don't increase the size on Flash
-lto = true # enable for better optimizations
+lto = false # this significantly reduces flash use but probably messes up debugging more
